--- a/.github/workflows/master_certtool-backend.yml
+++ b/.github/workflows/master_certtool-backend.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Log in to registry
       uses: docker/login-action@v2
       with:
-        registry: https://acreasytraining.azurecr.io/
+        registry: https://certtool.azurecr.io/
         username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_5FB64C7839624E73A3FA7381E6F5595F }}
         password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_7E9C13BF92D643999C4445E311797626 }}
 
@@ -30,7 +30,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: acreasytraining.azurecr.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_5FB64C7839624E73A3FA7381E6F5595F }}/certtool:${{ github.sha }}
+        tags: certtool.azurecr.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_5FB64C7839624E73A3FA7381E6F5595F }}/certtool:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -49,4 +49,4 @@ jobs:
         app-name: 'certtool-backend'
         slot-name: 'production'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        images: 'acreasytraining.azurecr.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_5FB64C7839624E73A3FA7381E6F5595F }}/certtool:${{ github.sha }}'
+        images: 'certtool.azurecr.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_5FB64C7839624E73A3FA7381E6F5595F }}/certtool:${{ github.sha }}'
