--- a/.github/workflows/master_certtool-backend.yml
+++ b/.github/workflows/master_certtool-backend.yml
@@ -24,8 +24,14 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    - name: Build and test project
+      run: |
+        docker build -t my-rust-app .
+        docker run my-rust-app cargo test
+
     - name: Log in to registry
       uses: docker/login-action@v2
+      if: success()
       with:
         registry: https://certtool.azurecr.io/
         username: ${{ secrets.CONTAINER_USERNAME }}
