--- a/.github/workflows/master_certtool-backend.yml
+++ b/.github/workflows/master_certtool-backend.yml
@@ -47,6 +47,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    if: success()
     environment:
       name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
