--- a/.github/workflows/master_certtool-backend.yml
+++ b/.github/workflows/master_certtool-backend.yml
@@ -60,22 +60,17 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    - name: Deploy to Azure Container Instances
-      uses: azure/container-job@v1
+    - name: 'Deploy to Azure Container Instances'
+      uses: 'azure/aci-deploy@v1'
       with:
-        container-name: certtool-backend
-        image-name: certtool.azurecr.io/certtool/certtool:latest
-        resource-group: rgByPWSH
-        location: eastus
-        dns-name-label: certtool-backend-dns
+        resource-group: rgByPWSH${{ github.run_number }}
+        name: certtool-backend
+        image: certtool.azurecr.io/certtool/certtool:latest
         ports: 8000
-
-    - name: Get ACI Public IP
-      id: get-ip
-      run: |
-          ip=$(az container show --resource-group rgByPWSH --name certtool-backend --query ipAddress.ip --output tsv --api-version 2018-10-01)
-          echo "IP_ADDRESS=$ip" >> $GITHUB_ENV
-
-    - name: Display IP Address
-      run: |
-          echo "Public IP Address: ${{ env.IP_ADDRESS }}"
+        dns-name-label: ${{ secrets.RESOURCE_GROUP }}${{ github.run_number }}
+        image: certtool.azurecr.io/${{ secrets.CONTAINER_USERNAME }}/certtool:${{ github.sha }}
+        registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+        registry-username: ${{ secrets.CONTAINER_USERNAME }}
+        registry-password: ${{ secrets.CONTAINER_PASSWORD }}
+        location: 'west us'
+        os-type: Linux
