change some value

--- a/.github/workflows/master_certtool-backend.yml
+++ b/.github/workflows/master_certtool-backend.yml
@@ -68,8 +68,8 @@ jobs:
         image: certtool.azurecr.io/certtool/certtool:latest
         ports: 8000
         dns-name-label: rgByPWSH${{ github.run_number }}
-        registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+        registry-login-server: https://certtool.azurecr.io/
         registry-username: ${{ secrets.CONTAINER_USERNAME }}
         registry-password: ${{ secrets.CONTAINER_PASSWORD }}
         location: 'west us'
-        os-type: Linux
+        os-type: Linux  
