change image name

--- a/.github/workflows/master_certtool-backend.yml
+++ b/.github/workflows/master_certtool-backend.yml
@@ -65,7 +65,7 @@ jobs:
       with:
         resource-group: rgByPWSH
         name: certtool-backend
-        image: certtool.azurecr.io/certtool/certtool:latest
+        image: certtool.azurecr.io/${{ secrets.CONTAINER_USERNAME }}/certtool:${{ github.sha }}
         ports: 8000
         dns-name-label: rgByPWSH${{ github.run_number }}
         registry-login-server: certtool.azurecr.io
