--- a/.github/workflows/master_certtool-backend.yml
+++ b/.github/workflows/master_certtool-backend.yml
@@ -72,4 +72,6 @@ jobs:
         registry-username: ${{ secrets.CONTAINER_USERNAME }}
         registry-password: ${{ secrets.CONTAINER_PASSWORD }}
         location: 'west us'
+        vnet: certeef-vn
+        subnet: default
         os-type: Linux  
