--- a/.github/workflows/master_certtool-backend.yml
+++ b/.github/workflows/master_certtool-backend.yml
@@ -51,7 +51,15 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           fingerprint: ${{ secrets.SERVER_FINGERPRINT }}
+          envs: SMTP_HOST, SMTP_PORT, SMTP_USERNAME, SMTP_PASSWORD, NOREPLY_EMAIL_ADDRESS, VERIFY_URL
           script: |
+            echo "export SMTP_HOST=$SMTP_HOST" >> ~/.bashrc
+            echo "export SMTP_PORT=$SMTP_PORT" >> ~/.bashrc
+            echo "export SMTP_USERNAME=$SMTP_USERNAME" >> ~/.bashrc
+            echo "export SMTP_PASSWORD=$SMTP_PASSWORD" >> ~/.bashrc
+            echo "export NOREPLY_EMAIL_ADDRESS=$NOREPLY_EMAIL_ADDRESS" >> ~/.bashrc
+            echo "export VERIFY_URL=$VERIFY_URL" >> ~/.bashrc
+            source ~/.bashrc
             CI=true docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
             CI=true docker stop certtool
             CI=true docker system prune -af
