--- a/.github/workflows/master_certtool-backend.yml
+++ b/.github/workflows/master_certtool-backend.yml
@@ -51,12 +51,11 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           fingerprint: ${{ secrets.SERVER_FINGERPRINT }}
-          envs: SMTP_HOST, SMTP_PORT, SMTP_USERNAME, SMTP_PASSWORD, NOREPLY_EMAIL_ADDRESS, VERIFY_URL
+          envs: SMTP_HOST, API_KEY, SECRET_KEY, NOREPLY_EMAIL_ADDRESS, VERIFY_URL
           script: |
             echo "export SMTP_HOST=${{secrets.SMTP_HOST}}" >> ~/.bashrc
-            echo "export SMTP_PORT=${{secrets.SMTP_PORT}}" >> ~/.bashrc
-            echo "export SMTP_USERNAME=${{secrets.SMTP_USERNAME}}" >> ~/.bashrc
-            echo "export SMTP_PASSWORD=${{secrets.SMTP_PASSWORD}}" >> ~/.bashrc
+            echo "export API_KEY=${{secrets.API_KEY}}" >> ~/.bashrc
+            echo "export SECRET_KEY=${{secrets.SECRET_KEY}}" >> ~/.bashrc
             echo "export NOREPLY_EMAIL_ADDRESS=${{secrets.NOREPLY_EMAIL_ADDRESS}}" >> ~/.bashrc
             echo "export VERIFY_URL=${{secrets.VERIFY_URL}}" >> ~/.bashrc
             source ~/.bashrc
