--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ tokio = { version = "1", features = ["full"] }
 lettre = "0.11.2"
 serde_json = "1.0.68"
 dotenv = "0.15.0"
+reqwest = { version = "0.11.22", features = ["json"] }
+base64 = "0.21.5"
 
 [dependencies.uuid]
 version = "1.6.1"
